# cdk-aws-serverless-otlp-forwarder-kinesis

./: .gitattributes  .gitignore  .projenrc.ts  Cargo.toml  README.md  biome.jsonc  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
.projen/: deps.json  files.json  tasks.json
src/functions/app-backend/: Cargo.toml
src/functions/app-frontend/: Cargo.toml
src/functions/otlp-forwarder-cwl/: Cargo.toml
src/functions/otlp-forwarder-cwl/src/: main.rs  parser.rs
src/functions/otlp-forwarder-kinesis/: Cargo.toml
src/functions/otlp-forwarder-kinesis/src/: main.rs  parser.rs
src/layers/otlp-stdout-kinesis-extension/src/: config.rs  main.rs
src/stacks/: my-stack.ts
